# D3D9SpanScreens

./: README.md
src/: CMakeLists.txt  d3d9_export.h  d3d_proxy.cpp  d3d_proxy.hpp  d3ddevice_proxy.cpp  d3ddevice_proxy.hpp  d3dswapchain_proxy.cpp  d3dswapchain_proxy.hpp  libmain.cpp  libmain.hpp  main.cpp  settings.cpp  settings.hpp
src/simple_logger/: logger.cpp  logger.hpp
src/tools/: CMakeLists.txt  com_ptr.hpp  common.cpp  common.hpp  handle_ptr.cpp  handle_ptr.hpp  help_funcs.cpp  help_funcs.hpp  ini_file.cpp  ini_file.hpp  window_hook.cpp
